# azure-devops-sprint-mcp-public

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/: API-REFERENCE.md  DEVELOPMENT.md  DOCKER.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md  WSL-CLAUDE-DESKTOP.md  code-review.md
examples/: README.md  create_workitem.py  query_sprint.py
scripts/: restart.sh  run_docker_stdio.bat  run_docker_stdio.py  run_stdio.py  setup.sh  start.sh  stop.sh  test_bridge.sh
src/: auth.py  cache.py  constants.py  decorators.py  errors.py  log_sanitizer.py  models.py  server.py  service_manager.py  validation.py
src/services/: sprint_service.py  workitem_service.py
tests/: test_basic.py  test_cache.py  test_constants.py  test_decorators.py  test_errors.py  test_multi_project_integration.py  test_service_manager.py  test_validation.py  test_wiql_queries.py
